# Pyconversor

./: LICENSE  MANIFEST.in  README.md  pycorvert.py  pyproject.toml  setup.config  test.py
modules/: Node.py  Tree.py
pyconvert/: pyconvert.py  pycorvert.py
pyconvert/modules/: Tree.py
